# fableport

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  USAGE.md
scripts/: pixiv_refresh_token.py
src/fanfictl/: auth.py  cli.py  config.py  content.py  exporters.py  jobs.py  keystore.py  library.py  models.py  pixiv.py  pixiv_oauth.py  pixiv_tokens.py  storage.py  translate.py  webapp.py  workflow.py
src/fanfictl/static/: app.css
src/fanfictl/templates/: base.html  dashboard.html  job.html  login.html  not_found.html  reader.html  reader_chapter.html  reader_series.html  work_detail.html
tests/: test_jobs.py  test_smoke.py  test_web.py
